# router.target

./: .env.sample  .gitignore  .prettierignore  README.md  TODO.md  bootstrap.sh  config.default.sh  install.py  install.sh  poetry.toml  pyproject.toml  pyrightconfig.json  rush.json  test.py
assets/: acme-renew.service  bootstrap.sh  clash.service  ddns.service  ddns.timer  dev-shm-sockets.mount  dhcp.service  dnscache.service  dnsconvert.service  dnsdispatch.service  dnsguest.service  dnsproxy.service  dnstunnel.service.bak  journald@noisy.conf  openwrt.nspawn  openwrt.service  pppoe.service  router.slice  router.target  wireguard-config-server.service  wireguard-dns.service
assets/base-services/: router.slice  router.target
assets/ddns/: run.sh
assets/dhcp/: handle.sh
common/: config-files.sh  constants.sh  fn.sh  systemd.sh
common/rig/: globals.d.ts  package.json
config/chinadns-ng/: config  hosts
config/clash/: .gitignore  config.yaml
config/ddns/: run.sh
config/dnsdispatch/: blacklist.conf  config.conf  listen.conf
config/pppoe/: pppoe.sh
router/: __init__.py  target.py
router/_internal/: action_timestamp.py  config_file.py  constants.py  fs.py  git.py  http_client.py  install.py  logger.py  subprocess.py  systemd.py  utils.py
router/proxy/: __init__.py
router/tools/: __init__.py
scripts/: chroot.sh  create-network.sh  exec.sh  install.sh  upgrade-openwrt.sh
scripts/inc/: base.sh  exec.sh  lowlevel.sh  tempfile.sh
scripts/tools/: init-network.sh  unshare.sh
services/acme/: acme-renew.service  acme-renew.timer  execute.sh  (+2 more)
(+194 files in other folders)
